--- a/main/templates/main/films.html
+++ b/main/templates/main/films.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
 	<title>Фильмы</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 </head>
 <body>
 
@@ -25,7 +26,6 @@
 				<ul class="menu">
 					<li><a href="index.html">Главная</a></li>	
 					<li class="selected"><a href="films.html">Фильмы</a></li>
-					<li><a href="#">Сериалы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
 					<li><a href="contact.html">Контакты</a></li>
 				</ul>
