--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<!-- {% load static %} -->
+{% extends 'base.html' %}
+
+{% block page %}
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -6,7 +10,7 @@
 	<title>Главная страница</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %} ">
 </head>
 <body>
 
@@ -25,7 +29,6 @@
 				<ul class="menu">
 					<li class="selected"><a href="index.html">Главная</a></li>	
 					<li><a href="films.html">Фильмы</a></li>
-					<li><a href="#">Сериалы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
 					<li><a href="contact.html">Контакты</a></li>
 				</ul>
@@ -78,7 +81,7 @@
 					</ul>
 				</div>
 
-			</div>
+			</div> -->
 
 			<div class="content">
 				
@@ -86,7 +89,7 @@
 
 				<div class="films_block">
 					
-					<a href="#"><img src="assets/img/matrix.png"></a>
+					<a href="#"><img src="{% static 'assets/img/matrix.png' %}"></a>
 					<a href="#"><img src="assets/img/max.png"></a>
 					<a href="show.html"><img src="assets/img/inter.png"></a>
 					<a href="#"><img src="assets/img/cloud.png"></a>
@@ -135,18 +138,18 @@
 
 
 
-	<div class="footer">
+	<!-- <div class="footer">
 		<p>
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
-			<a href="#">Сериалы</a> |
 			<a href="rating.html">Рейтинг фильмов</a> |
 			<a href="contact.html">Контакты</a>
 		</p>
-		<p>wh-db.com 2015</p>
+		<p>wh-db.com 2021</p>
 	</div>
 
 	</div>
 	
 </body>
-</html>
+</html> -->
+{% endblock %}
