added jinja to some html files

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,5 +1,4 @@
-
-    {% load static %}
+{% load static %}
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -8,7 +7,7 @@
         <title>Фильмы</title>
         <meta name="description" content="Киномонстр - это портал о кино" />
         <meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-        <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     </head>
     <body>
     
