--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -7,7 +7,7 @@
 	<title>Контакты</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="{% static 'assets/css/style.css %}">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css %}" />
 </head>
 <body>
 
@@ -109,11 +109,10 @@
 		<p>
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
-			<a href="#">Сериалы</a> |
 			<a href="rating.html">Рейтинг фильмов</a> |
 			<a href="contact.html">Контакты</a>
 		</p>
-		<p>wh-db.com 2015</p>
+		<p>wh-db.com 2021</p>
 	</div>
 
 	</div>
