--- a/main/templates/main/films.html
+++ b/main/templates/main/films.html
@@ -7,7 +7,7 @@
 	<title>Фильмы</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
 </head>
 <body>
 
@@ -83,25 +83,25 @@
 			<div class="content">
 				
 				<div class="info_film">
-					<img src="assets/img/inter.png">
+					<img src="{% static 'assets/img/inter.png' %}"/>
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 					<div class="button"><a href="show.html">Смотреть</a></div>
 				</div>
 
 				<div class="info_film">
-					<img src="assets/img/max.png">
+					<img src="{% static 'assets/img/max.png' %}"/>
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 					<div class="button"><a href="#">Смотреть</a></div>
 				</div>
 
 				<div class="info_film">
-					<img src="assets/img/matrix.png">
+					<img src="{% static 'assets/img/matrix.png' %}"/>
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 					<div class="button"><a href="#">Смотреть</a></div>
 				</div>
 
 				<div class="info_film">
-					<img src="assets/img/cloud.png">
+					<img src="{% static 'assets/img/cloud.png' %}"/>
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 					<div class="button"><a href="#">Смотреть</a></div>
 				</div>
@@ -120,11 +120,10 @@
 		<p>
 			<a href="index.html">Главная</a> |
 			<a href="film.html">Фильмы</a> | 
-			<a href="#">Сериалы</a> |
 			<a href="rating.html">Рейтинг фильмов</a> |
 			<a href="contact.html">Контакты</a>
 		</p>
-		<p>wh-db.com 2015</p>
+		<p>wh-db.com 2021</p>
 	</div>
 
 	</div>
