--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,8 +1,5 @@
-<!-- {% load static %} -->
-{% extends 'base.html' %}
-
-{% block page %}
-<!-- <!DOCTYPE html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -10,7 +7,7 @@
 	<title>Главная страница</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="{% static 'assets/css/style.css' %} ">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}" /> 
 </head>
 <body>
 
@@ -81,7 +78,7 @@
 					</ul>
 				</div>
 
-			</div> -->
+			</div>
 
 			<div class="content">
 				
@@ -90,9 +87,9 @@
 				<div class="films_block">
 					
 					<a href="#"><img src="{% static 'assets/img/matrix.png' %}"></a>
-					<a href="#"><img src="assets/img/max.png"></a>
-					<a href="show.html"><img src="assets/img/inter.png"></a>
-					<a href="#"><img src="assets/img/cloud.png"></a>
+					<a href="#"><img src="{% static 'assets/img/max.png' %}"></a>
+					<a href="show.html"><img src="{% static 'assets/img/inter.png' %}"></a>
+					<a href="#"><img src="{% static 'assets/img/cloud.png' %}"></a>
 
 				</div>
 
@@ -100,13 +97,12 @@
 
 				<div class="films_block">
 					
-					<a href="#"><img src="assets/img/dead.png"></a>
-					<a href="#"><img src="assets/img/silicon.png"></a>
-					<a href="#"><img src="assets/img/breakingbad.png"></a>
-					<a href="#"><img src="assets/img/xfiles.png"></a>
+					<a href="#"><img src="{% static 'assets/img/dead.png' %}"></a>
+					<a href="#"><img src="{% static 'assets/img/silicon.png' %}"></a>
+					<a href="#"><img src="{% static 'assets/img/breakingbad.png' %}"></a>
+					<a href="#"><img src="{% static 'assets/img/xfiles.png' %}"></a>
 
 				</div>
-
 
 				<div class="posts">
 					
@@ -137,8 +133,7 @@
 
 
 
-
-	<!-- <div class="footer">
+	<div class="footer">
 		<p>
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
@@ -151,5 +146,4 @@
 	</div>
 	
 </body>
-</html> -->
-{% endblock %}
+</html>
