added jinja to html files

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -27,7 +27,7 @@
 					<li class="selected"><a href="index.html">Главная</a></li>	
 					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="contact.html">Контакты</a></li>
+					<li><a href="contact.html">Отзывы</a></li>
 				</ul>
 
 			</div>
@@ -138,7 +138,7 @@
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
 			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a>
+			<a href="contact.html">Отзывы</a>
 		</p>
 		<p>wh-db.com 2021</p>
 	</div>
