--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -27,7 +27,7 @@
                         <li><a href="index.html">Главная</a></li>	
                         <li class="selected"><a href="films.html">Фильмы</a></li>
                         <li><a href="rating.html">Рейтинг фильмов</a></li>
-                        <li><a href="contact.html">Контакты</a></li>
+                        <li><a href="contact.html">Отзывы</a></li>
                     </ul>
     
                 </div>
@@ -63,7 +63,7 @@
     
                     <div class="sidebar">
                         <h2>Новости</h2>
-                        <span>31.02.2018</span>
+                        <span>31.11.2021</span>
                         <p>Мы запустили расширенный поиск</p>
                         <a href="#">читать</a>
                     </div>
@@ -121,7 +121,7 @@
                 <a href="index.html">Главная</a> |
                 <a href="film.html">Фильмы</a> | 
                 <a href="rating.html">Рейтинг фильмов</a> |
-                <a href="contact.html">Контакты</a>
+                <a href="contact.html">Отзывы</a>
             </p>
             <p>wh-db.com 2021</p>
         </div>
