--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Контакты</title>
+	<title>Отзывы</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="{% static 'assets/css/style.css %}" />
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
+	<!-- <link rel="stylesheet" href="assets/css/style.css" /> -->
 </head>
 <body>
 
@@ -27,7 +28,7 @@
 					<li><a href="index.html">Главная</a></li>	
 					<li><a href="films.html">Фильмы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li class="selected"><a href="contact.html">Контакты</a></li>
+					<li class="selected"><a href="contact.html">Отзывы</a></li>
 				</ul>
 
 			</div>
@@ -82,7 +83,7 @@
 
 			<div class="content">
 				
-				<h1>Контакты</h1>
+				<h1>Отзывы</h1>
 				<p>Отправьте ваш отзыв о портале КиноМонстр</p>
 	
 				<div class="send send_contact">	
@@ -110,7 +111,7 @@
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
 			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a>
+			<a href="contact.html">Отзывы</a>
 		</p>
 		<p>wh-db.com 2021</p>
 	</div>
