--- a/main/templates/main/rating.html
+++ b/main/templates/main/rating.html
@@ -7,7 +7,7 @@
 	<title>Рейтинг фильмов</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
 </head>
 <body>
 
@@ -27,7 +27,7 @@
 					<li><a href="index.html">Главная</a></li>	
 					<li><a href="films.html">Фильмы</a></li>
 					<li class="selected"><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="contact.html">Контакты</a></li>
+					<li><a href="contact.html">Отзывы</a></li>
 				</ul>
 
 			</div>
@@ -128,12 +128,11 @@
 	<div class="footer">
 		<p>
 			<a href="index.html">Главная</a> |
-			<a href="films.html">Фильмы</a> | 
-			<a href="#">Сериалы</a> |
+			<a href="films.html">Фильмы</a> |
 			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a>
+			<a href="contact.html">Отзывы</a>
 		</p>
-		<p>wh-db.com 2015</p>
+		<p>wh-db.com 2021</p>
 	</div>
 
 	</div>
