--- a/main/templates/main/show.html
+++ b/main/templates/main/show.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
 	<title>Фильм Интерстеллар</title>
 	<meta name="description" content="Киномонстр - это портал о кино" />
 	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
 </head>
 <body>
 
@@ -25,9 +26,8 @@
 				<ul class="menu">
 					<li><a href="index.html">Главная</a></li>	
 					<li class="selected"><a href="films.html">Фильмы</a></li>
-					<li><a href="#">Сериалы</a></li>
 					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="contact.html">Контакты</a></li>
+					<li><a href="contact.html">Отзывы</a></li>
 				</ul>
 
 			</div>
@@ -95,7 +95,7 @@
 				<hr>	
 				<h2>Описание Интерстеллар</h2>
 				<div class="descriptions_film">
-					<img src="assets/img/inter.png">
+					<img src="{% static 'assets/img/inter.png' %}"/>
 					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие, чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
 				</div>
 
@@ -118,7 +118,7 @@
 						Дмитрий
 					</div>
 					<div class="review_text">
-						После фильма Начало, я с не терпением ждал еще работ от Кристофера Нолана. Интерстеллар меня впечатлил.
+						После фильма, я с не терпением ждал еще работ от Кристофера Нолана. Интерстеллар меня впечатлил.
 					</div>
 				</div>
 	
@@ -145,11 +145,10 @@
 		<p>
 			<a href="index.html">Главная</a> |
 			<a href="films.html">Фильмы</a> | 
-			<a href="#">Сериалы</a> |
 			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a>
+			<a href="contact.html">Отзывы</a>
 		</p>
-		<p>wh-db.com 2015</p>
+		<p>wh-db.com 2021</p>
 	</div>
 
 	</div>
