--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -16,7 +16,7 @@
             <div class="header">
                 <div class="logo">
                     <div class="logo_text">
-                        <h1><a href="index.html">КиноМонстр</a></h1>
+                        <h1><a href="{% url 'home' %}">КиноМонстр</a></h1>
                         <h2>Кино - наша страсть!</h2>
                     </div>
                 </div>
@@ -24,10 +24,10 @@
                 <div class="menubar">
                     
                     <ul class="menu">
-                        <li><a href="index.html">Главная</a></li>	
-                        <li class="selected"><a href="films.html">Фильмы</a></li>
-                        <li><a href="rating.html">Рейтинг фильмов</a></li>
-                        <li><a href="contact.html">Отзывы</a></li>
+                        <li><a href="{% url 'home' %}">Главная</a></li>	
+                        <li class="selected"><a href="{% url 'films' %}">Фильмы</a></li>
+                        <li><a href="{% url 'rating' %}">Рейтинг фильмов</a></li>
+                        <li><a href="{% url 'contact' %}">Отзывы</a></li>
                     </ul>
     
                 </div>
@@ -71,7 +71,7 @@
                     <div class="sidebar">
                         <h2>Рейтинг фильмов</h2>
                         <ul>
-                            <li><a href="show.html">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
+                            <li><a href="{% url 'show' %}">Интерстеллар</a><span class="rating_sidebar">8.1</span></li>
                             <li><a href="#">Матрица</a><span class="rating_sidebar">8.0</span></li>
                             <li><a href="#">Безумный макс</a><span class="rating_sidebar">7.5</span></li>
                             <li><a href="#">Облачный атлас</a><span class="rating_sidebar">7.4</span></li>
@@ -118,10 +118,10 @@
     
         <div class="footer">
             <p>
-                <a href="index.html">Главная</a> |
-                <a href="film.html">Фильмы</a> | 
-                <a href="rating.html">Рейтинг фильмов</a> |
-                <a href="contact.html">Отзывы</a>
+                <a href="{% url 'home' %}">Главная</a> |
+                <a href="{% url 'films' %}">Фильмы</a> | 
+                <a href="{% url 'rating' %}">Рейтинг фильмов</a> |
+                <a href="{% url 'contact' %}">Отзывы</a>
             </p>
             <p>wh-db.com 2021</p>
         </div>
