--- a/main/templates/main/show.html
+++ b/main/templates/main/show.html
@@ -16,7 +16,7 @@
 		<div class="header">
 			<div class="logo">
 				<div class="logo_text">
-					<h1><a href="index.html">КиноМонстр</a></h1>
+					<h1><a href="{% url 'home' %}">КиноМонстр</a></h1>
 					<h2>Кино - наша страсть!</h2>
 				</div>
 			</div>
@@ -24,10 +24,10 @@
 			<div class="menubar">
 				
 				<ul class="menu">
-					<li><a href="index.html">Главная</a></li>	
-					<li class="selected"><a href="films.html">Фильмы</a></li>
-					<li><a href="rating.html">Рейтинг фильмов</a></li>
-					<li><a href="contact.html">Отзывы</a></li>
+					<li><a href="{% url 'home' %}">Главная</a></li>	
+					<li class="selected"><a href="{% url 'films' %}">Фильмы</a></li>
+					<li><a href="{% url 'rating' %}">Рейтинг фильмов</a></li>
+					<li><a href="{% url 'contact' %}">Отзывы</a></li>
 				</ul>
 
 			</div>
@@ -143,10 +143,10 @@
 
 	<div class="footer">
 		<p>
-			<a href="index.html">Главная</a> |
-			<a href="films.html">Фильмы</a> | 
-			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Отзывы</a>
+			<a href="{% url 'home' %}">Главная</a> |
+			<a href="{% url 'films' %}">Фильмы</a> | 
+			<a href="{% url 'rating' %}">Рейтинг фильмов</a> |
+			<a href="{% url 'contact' %}">Отзывы</a>
 		</p>
 		<p>wh-db.com 2021</p>
 	</div>
