added crud and news

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -63,9 +63,10 @@
 
 				<div class="sidebar">
 					<h2>Новости</h2>
-					<span>31.02.2018</span>
-					<p>Мы запустили расширенный поиск</p>
-					<a href="#">читать</a>
+					<span>15 декабря 2021</span>
+					<p>Киану Ривз, Кэрри-Энн Мосс снова в Матрице. Чего ждать от них и других героев «Воскрешения»?</p>
+					<!-- <a href="https://www.kinopoisk.ru/media/news/4005524/">читать</a> -->
+					<a href="http://localhost:8000/kabar/">читать</a>
 				</div>
 
 				<div class="sidebar">
@@ -114,14 +115,15 @@
 						</p>
 					</div>
 
-					<p><a href="#">читать</a></p>
+					<!-- <p><a href="https://www.filmpro.ru/materials/32217">читать</a></p> -->
+					<p><a href="http://localhost:8000/news/">читать</a></p>
 
 					<hr>
 		            <h2><a href="#">Актер Том Хенкс поделился впечатлением о фестивале</a></h2>
 		            <div class="posts_content">
 		              <p>16 февраля в Лондоне состоялась 67-я церемония вручения наград Британской киноакадемии. Леонардо ДиКаприо, Брэд Питт, Анджелина Джоли, Кейт Бланшетт, Хелен Миррен, Эми Адамс, Кристиан Бэйл, Альфонсо Куарон и другие гости и победители премии — в нашем репортаже.</p>
 		            </div>
-		            <p><a href="#">читать</a></p>
+		            <p><a href="http://localhost:8000/news_2/">читать</a></p>
 
 				</div>
 
