--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -87,7 +87,8 @@
 				<p>Отправьте ваш отзыв о портале КиноМонстр</p>
 	
 				<div class="send send_contact">	
-					<form method="post" action="#" id="contact">
+					<form method="post" action="{% url 'reviews' %}" id="contact">
+					{% csrf_token %}
 						<input type="text" name="review_name" placeholder="ваше имя">
 						<input type="text" name="review_email" placeholder="ваш email">
 						<textarea name="review_text"></textarea>
